--- a/app/views/admin/shrines/edit.html.erb
+++ b/app/views/admin/shrines/edit.html.erb
@@ -1,28 +1,34 @@
-<h1>Admin::Shrines#edit</h1>
-<%= form_with model: [:admin, @shrine], local: true do |f| %>
-  <div class="form-group">
-    <%= f.label :神社名 %>
-    <%= f.text_field :name %>
+<div class="container">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <h1>編集画面</h1>
+      <%= form_with model: [:admin, @shrine], local: true do |f| %>
+        <div class="form-row mb-3">
+          <%= f.label :神社名, class:"col-2" %>
+          <%= f.text_field :name, class:"col-7" %>
+        </div>
+        <div class="form-row mb-3">
+          <%= f.label :住所, class:"col-2" %>
+          <%= f.text_area :address, class:"col-7" %>
+        </div>
+        <div class="form-row mb-3">
+          <%= f.label :紹介文, class:"col-2" %>
+          <%= f.text_area :introduction, rows: 6, class:"col-7" %>
+        </div>
+        <div class="form-row mb-3">
+          <%= f.label :祭神, class:"col-2" %>
+          <%= f.text_field :god_name, value: @shrine_gods, class:"col-7" %>
+        </div>
+        <div class="form-row mb-3">
+          <%= f.label :タグ, class:"col-2" %>
+          <%= f.text_field :tag_name, value: @shrine_tags, class:"col-7" %>
+        </div>
+        <div class="form-row mb-3">
+          <%= f.label :画像, class:"col-2" %>
+          <%= f.attachment_field :shrine_images_images, multiple: true, class:"col-7 p-0" %>
+        </div>
+        <%= f.submit '変更を保存', class:"btn btn-sm btn-success" %>
+      <% end %>
+    </div>
   </div>
-  <div class="form-group">
-    <%= f.label :住所 %>
-    <%= f.text_area :address %>
-  </div>
-  <div class="form-grooup">
-    <%= f.label :紹介文 %>
-    <%= f.text_area :introduction %>
-  </div>
-  <div class="form-group">
-    <%= f.label :祭神 %>
-    <%= f.text_field :god_name, value: @shrine_gods %>
-  </div>
-  <div class="form-group">
-    <%= f.label :"タグ(,を入れると複数登録)" %>
-    <%= f.text_field :tag_name, value: @shrine_tags %>
-  </div>
-  <div class="form-group">
-    <%= f.label :画像 %>
-    <%= f.attachment_field :shrine_images_images, multiple: true %>
-  </div>
-  <%= f.submit '変更を保存', class:"btn btn-sm btn-success" %>
-<% end %>
+</div>
