--- a/app/views/admin/shrines/index.html.erb
+++ b/app/views/admin/shrines/index.html.erb
@@ -1,15 +1,31 @@
-<h1>Admin::Shrines#index</h1>
-<% @shrines.each do |shrine| %>
-  <div>
-    <%= shrine.name %>
-    <%= shrine.address %>
-    <% shrine.shrine_images.first(1).each do |image| %>
-      <%= attachment_image_tag image, :image %>
-    <% end %>
-    <%= shrine.introduction %>
-    <%= shrine.gods.map(&:god_name).join(',') %>
-    <%= shrine.tags.map(&:tag_name).join(',') %>
-    <%= shrine.latitude %>
-    <%= shrine.longitude %>
+<div class="container">
+  <div class="row">
+    <div class="col-8">
+      <h1>神社一覧</h1>
+      <% @shrines.each do |shrine| %>
+      <div class="card shadow p-0 mb-3">
+        <% shrine.shrine_images.first(1).each do |image| %>
+          <%= attachment_image_tag image, :image %>
+        <% end %>
+        <div class="card-body">
+          <h5><%= link_to shrine.name, admin_shrine_path(shrine) %></h5>
+          <p><%= shrine.address %></p>
+        </div>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <%= shrine.introduction %>
+          </li>
+          <li class="list-group-item">
+            <%= shrine.gods.map(&:god_name).join(',') %>
+          </li>
+          <li class="list-group-item">
+            <% shrine.tags.each do |tag| %>
+              <%= link_to tag.tag_name + "(#{tag.shrine.count})", admin_search_tag_path(tag_name: tag.tag_name) %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
