--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Shrines#index</h1>
-<p>Find me in app/views/shrines/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-8">
+      <h1>神社一覧</h1>
+      <% @shrines.each do |shrine| %>
+      <div class="card shadow p-0 mb-3">
+        <% shrine.shrine_images.first(1).each do |image| %>
+          <%= attachment_image_tag image, :image %>
+        <% end %>
+        <div class="card-body">
+          <h5><%= link_to shrine.name, shrine_path(shrine) %></h5>
+          <p><%= shrine.address %></p>
+        </div>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <%= shrine.introduction %>
+          </li>
+          <li class="list-group-item">
+            <%= shrine.gods.map(&:god_name).join(',') %>
+          </li>
+          <li class="list-group-item">
+            <% shrine.tags.each do |tag| %>
+              <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_tag_path(tag_name: tag.tag_name) %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+      <% end %>
+    </div>
+    <div class="col-4"></div>
+  </div>
+</div>
