--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -1,2 +1,49 @@
-<h1>Shrines#show</h1>
-<p>Find me in app/views/shrines/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-7">
+      <div class="card shadow p-0 mb-3">
+        <div class="card-body">
+          <h4><%= @shrine.name %></h4>
+        </div>
+        <% @shrine.shrine_images.first(1).each do |image| %>
+          <%= attachment_image_tag image, :image %>
+        <% end %>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <%= @shrine.introduction %>
+          </li>
+          <li class="list-group-item">祭神：
+            <% @shrine.gods.each do |god| %>
+              <%= god.god_name %>
+            <% end %>
+          </li>
+          <li class="list-group-item">
+            <% @shrine.tags.each do |tag| %>
+              <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_tag_path(tag_name: tag.tag_name) %>
+            <% end %>
+          </li>
+        </ul>
+          <!--%= @shrine.latitude %>-->
+          <!--%= @shrine.longitude %>-->
+      </div>
+       <div id="map" style="width: 100%; height: 350px;">
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
+      </div>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>住所</th>
+            <td><%= @shrine.address %></td>
+          </tr>
+          <tr>
+            <th>最寄り駅</th>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-5">
+      <p>投稿が入ります</p>
+    </div>
+  </div>
+</div>
