--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <%= link_to "ログイン", new_user_session_path %>
       </li>
     <% end %>
+    <%= render "searches/form" %>
     <%= yield %>
   </body>
 </html>
