--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,35 +2,42 @@
   <div>
     <div class="offset-2 mt-5">
       <h4 class="d-inline" style='text-shadow: 1px 2px 3px #808080;'>新規会員登録</h4>
-      <div class="mx-2 my-4"><h5 class="d-inline bg-light">会員の方はこちらからログイン</h5></div>
-      <%= form_with model: @user, url: user_session_path, local: true do |f| %>
+      <div class="mx-2 my-4"><h5 class="d-inline bg-light">会員がまだの方はこちらから</h5></div>
+      <%= form_with model: @user, url: user_registration_path, id:'new_user', class:'new_user', local: true do |f| %>
         <%= render "users/shared/error_messages", resource: resource %>
+        <div class="form-row">
+          <div class="col-2">名前</div>
+          <div class="field">
+            <%= f.text_field :name, autofocus: true, autocomplete: "name", size: 40, class:"ml-3 mb-3" %>
+          </div>
+        </div>
+
         <div class="form-row">
           <div class="col-2">メールアドレス</div>
           <div class="field">
             <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", size: 40, class:"ml-3 mb-3" %>
           </div>
         </div>
-        
+
         <div class="form-row">
           <div class="col-2">パスワード(６文字以上)</div>
           <div class="field">
             <%= f.password_field :password, autocomplete: "new-password", size: 40, class:"ml-3 mb-3"%>
           </div>
         </div>
-        
+
         <div class="form-row">
           <div class="col-2">パスワード(確認用)</div>
           <div class="field">
             <%= f.password_field :password_confirmation, autocomplete: "new-password", size: 40, class:"ml-3 mb-4" %>
           </div>
         </div>
-        
+
         <div>
           <%= f.submit "新規会員登録", class:"btn btn-sm btn-success offset-2 mb-4" %>
         </div>
       <% end %>
-      
+
       <h5 class="d-inline">既に登録済みの方</h5>
       <p class="offset-1 mt-4"><%= link_to 'こちら', new_user_session_path %>からログインを行ってください。</p>
     </div>
