--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#main-visual{
+  height: 550px;
+}
+
+.main-image1{
+  background-image: url(inari1.jpg);
+}
+
+.main-image2{
+  background-image: url(shrine2.jpg);
+}
+
+.main-image3{
+  background-image: url(inari3.jpg);
+}
+
+.main-image4{
+  background-image: url(shrine4.jpg);
+}
