--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,10 @@
-Hello World!
-<div id="map-container"></div>
+<div id="main-visual">
+  <div class="main-image1"></div>
+  <div class="main-image2"></div>
+  <div class="main-image3"></div>
+  <div class="main-image4"></div>
+</div>
+
+<div id="map-container">
+  <div class="canvas"></div>
+</div>
