--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -8,9 +8,11 @@
             <%= render "bookmarks/bookmark", shrine:@shrine %>
           </h3>
         </div>
-        <% @shrine.shrine_images.first(1).each do |image| %>
-          <%= attachment_image_tag image, :image %>
-        <% end %>
+        <div id="shrine-images">
+          <% @shrine.shrine_images.each do |image| %>
+            <%= attachment_image_tag image, :image , style:"width: 100%; height: 400px;"%>
+          <% end %>
+        </div>
         <ul class="list-group">
           <li class="list-group-item">
             <%= @shrine.introduction %>
