--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
         <h5>登録情報</h5>
         <%= link_to '編集', edit_user_path(@user), class:"btn btn-sm btn-success" %>
       </div>
-      <table class="table">
+      <table class="table table-bordered">
         <tr>
           <th>氏名</th>
           <td><%= @user.name %></td>
@@ -20,12 +20,30 @@
           <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50 %></td>
         </tr>
       </table>
+      <h3>参拝記録</h3>
+      <% @posts.each do |post| %>
+        <div class="card mb-3">
+          <div class="row">
+            <div class="col-4"><%= attachment_image_tag post.post_images.first, :image, :fill,250,170 %></div>
+            <div class="col-8">
+              <div class="card-body">
+                <h4 class="card-title"><%= link_to post.shrine.name, shrine_path(post.shrine) %></h4>
+                <p class="card-text"><%= post.body.truncate(50) %></p>
+                <p class="card-text"><small class="text-muted"><%= post.visit_date %></small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
-    <div class="col-4">
-      <h3>行きたいリスト</h3>
+    <div class="col-4 border">
+      <h3 class="border-bottom">ブックマーク</h3>
       <% if @bookmark_shrines.present? %>
         <% @bookmark_shrines.each do |shrine| %>
-          <%= link_to shrine.name, shrine_path(shrine) %><br>
+          <div class="media py-2 border-bottom">
+            <%= attachment_image_tag shrine.shrine_images.first, :image, :fill,50,50 %>
+            <h5 class="media-body pt-3 pl-2"><%= link_to shrine.name, shrine_path(shrine) %></h5>
+          </div>
         <% end %>
       <% else %>
         <h5>ブックマークされた神社はありません</h5>
