--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div id="shrine-images">
           <% @shrine.shrine_images.each do |image| %>
-            <%= attachment_image_tag image, :image , style:"width: 100%; height: 400px;"%>
+            <%= attachment_image_tag image, :image , style:"width: 100%; height: auto;"%>
           <% end %>
         </div>
         <ul class="list-group">
