--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="pb-5 mb-5">
+<header class="pb-5">
   <nav class="navbar navbar-expand-md bg-dark fixed-top" style="height: 200;">
     <div class="container">
       <a class="navbar-brand" href="/"><i class="fas fa-torii-gate text-white"></i></a>
@@ -6,14 +6,14 @@
         <ul class="navbar-nav">
           <% if user_signed_in? %>
             <li><%= link_to "マイページ", user_path(current_user), class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "神社一覧", shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">地域</a>
-              <%= render "layouts/header_area" %>
+            <li><%= link_to "概要", about_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+            <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
+              <%= render "layouts/header_shrine" %>
             </li>
-            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1"  %></li>
+            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
           <% else %>
-            <li><%= link_to "神社一覧", shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">地域</a>
+            <li><%= link_to "概要", shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+            <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
               <%= render "layouts/header_area" %>
             </li>
             <li><%= link_to "新規登録", new_user_registration_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
