--- a/app/views/layouts/_header_shrine.html.erb
+++ b/app/views/layouts/_header_shrine.html.erb
@@ -1,4 +1,5 @@
 <ul class="dropdown-menu">
+  <li><%= link_to "一覧", shrines_path, class:"dropdown-item" %></li>
   <li class="dropright drop-hover"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown">北海道・東北地方</a>
     <ul class="dropdown-menu">
       <li><%= link_to "北海道", search_path(content: '北海道', model: 'tag'), class:"dropdown-item" %></li>
