--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,21 +1,21 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row">
-    <div class="col-8 mx-auto">
+    <div class="col-9 mx-auto">
       <h3>新規投稿</h3>
       <%= form_with model: [@shrine, @post], local: true do |f| %>
-        <div class="form-group">
+        <div class="form-row">
           <%= f.label :画像, class:"col-2" %>
           <%= f.attachment_field :post_images_images, multiple: true, class:"col-6" %>
         </div>
-        <div class="form-group">
+        <div class="form-row my-3">
           <%= f.label :感想, class:"col-2" %>
-          <%= f.text_area :body, rows: 6, class:"col-6" %>
+          <%= f.text_area :body, rows: 7, class:"col-7" %>
         </div>
-        <div class="form-group">
+        <div class="form-row">
           <%= f.label :参拝日, class:"col-2" %>
-          <%= f.date_field :visit_date, class:"col-3" %>
+          <%= f.date_field :visit_date %>
         </div>
-        <%= f.submit "投稿", class:"btn btn-sm btn-success" %>
+        <%= f.submit "投稿する", class:"btn btn-success offset-4 mt-3" %>
       <% end %>
     </div>
   </div>
