--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row">
     <div class="col-7">
       <h3><%= link_to @post.shrine.name, shrine_path(@post.shrine), class:"text-reset" %></h3>
@@ -15,39 +15,56 @@
               <%= attachment_image_tag post_image, :image, class:"w-50 rounded mb-4" %>
             <% end %>
           </div>
+          <% if @post.user == current_user %>
+            <%= link_to '編集', edit_shrine_post_path(@post.shrine, @post), class:"btn btn-sm btn-success col-2" %>
+            <%= link_to '削除', shrine_post_path(@post.shrine, @post), method: :delete, class:"btn btn-sm btn-danger col-2" %>
+          <% end %>
         </div>
       </div>
       <h4><%= @post.user.name %>さんの他の投稿</h4>
-      <% @other_posts.each do |other_post| %>
-        <%= link_to shrine_post_path(other_post.shrine, other_post), class:"text-reset" do %>
-          <div class="card">
-            <h5><%= other_post.shrine.name %></h5>
-            <%= other_post.body.truncate(70) %>
-            <div class="d-flex">
-              <% other_post.post_images.each do |post_image| %>
-                <%= attachment_image_tag post_image, :image, size: "150x100", class:"mr-2" %>
-              <% end %>
+      <% if @other_posts.exists? %>
+        <% @other_posts.each do |other_post| %>
+          <%= link_to shrine_post_path(other_post.shrine, other_post), class:"text-reset" do %>
+            <div class="card">
+              <h5><%= other_post.shrine.name %></h5>
+              <%= other_post.body.truncate(70) %>
+              <div class="d-flex">
+                <% other_post.post_images.each do |post_image| %>
+                  <%= attachment_image_tag post_image, :image, size: "150x100", class:"mr-2" %>
+                <% end %>
+              </div>
             </div>
-          </div>
+          <% end %>
         <% end %>
+      <% else %>
+        <p>まだ投稿はありません</p>
       <% end %>
     </div>
 
     <div class="col-5">
       <h3>他の人の投稿</h3>
-      <% @other_user_posts.each do |post| %>
-        <div class="card">
-          <%= link_to post.user.name, user_path(post.user) %>
-          <p>参拝日：<%= post.visit_date.strftime("%Y年%m月%d日") %></p>
-          <%= link_to shrine_post_path(post.shrine, post) do %>
-            <div class="col-12 p-0 d-flex flex-wrap">
-              <% post.post_images.each do |post_image| %>
-                <%= attachment_image_tag post_image, :image, class:"w-50" %>
+      <% if @other_user_posts.exists? %>
+        <% @other_user_posts.each do |post| %>
+          <div class="card p-2 mb-2">
+            <div class="card-header mb-1 d-flex justify-content-between">
+              <%= link_to  user_path(post.user) do %>
+                <%= attachment_image_tag post.user, :profile_image, :fill,35,35, class:"rounded-circle" %>
+                <%= post.user.name %>
               <% end %>
+              <small class="text-muted pt-2">参拝日:<%= post.visit_date.strftime("%Y年%m月%d日") %></small>
             </div>
-            <%= post.body.truncate(50) %>
-          <% end %>
-        </div>
+            <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
+              <div class="col-12 p-0 d-flex flex-wrap justify-content-between">
+                <% post.post_images.each do |post_image| %>
+                  <%= attachment_image_tag post_image, :image, style:"width: 30%;" %>
+                <% end %>
+              </div>
+              <%= post.body.truncate(50) %>
+            <% end %>
+          </div>
+        <% end %>
+      <% else %>
+        <p>まだ投稿はありません</p>
       <% end %>
     </div>
   </div>
