--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col-8">
+    <div class="col-8 mx-auto">
       <h3>ユーザ編集画面</h3>
       <%= form_with model: @user, local: true do |f| %>
-        <div class="form-group">
-          <%= f.label :名前,class:"col-2" %>
-          <%= f.text_field :name, class:"col-5" %>
+        <div class="form-row">
+          <%= f.label :名前,class:"col-2 pl-4" %>
+          <%= f.text_field :name, class:"col-5 p-1" %>
         </div>
-        <div class="form-group">
-          <%= f.label :紹介文, class:"col-2" %>
-          <%= f.text_area :introduction, rows:3, class:"col-5" %>
+        <div class="form-row my-3">
+          <%= f.label :紹介文, class:"col-2 pl-4" %>
+          <%= f.text_area :introduction, rows:3, class:"col-5 p-1" %>
         </div>
-        <div class="from-group">
+        <div class="from-row">
           <%= f.label :ユーザ画像, class:"col-2" %>
           <%= f.attachment_field :profile_image %>
         </div>
-        <div class="d-flex">
+        <div class="d-flex offset-2 mt-3">
           <%= f.submit '変更を保存', class:"btn btn-sm btn-success mr-5" %>
           <%= link_to '退会する', users_caution_path, class:"btn btn-sm btn-danger" %>
         </div>
