--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
           <% else %>
             <li><%= link_to "概要", shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
             <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
-              <%= render "layouts/header_area" %>
+              <%= render "layouts/header_shrine" %>
             </li>
             <li><%= link_to "新規登録", new_user_registration_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
             <li><%= link_to "ログイン", new_user_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
