--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <%= render "layouts/header" %>
     <main>
+      <%= breadcrumbs separator: " &rsaquo; ", class:"ml-5 mt-3" %>
       <%= yield %>
     </main>
   </body>
