--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container mt-5">
   <div class="row">
+    <% breadcrumb :new_post, @shrine %>
     <div class="col-9 mx-auto">
       <h3>新規投稿</h3>
       <%= form_with model: [@shrine, @post], local: true do |f| %>
