--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -1,12 +1,15 @@
-<div class="container mt-5">
+<div class="container mt-3">
   <div class="row">
+    <% breadcrumb :shrine, @shrine %>
     <div class="col-7">
       <div class="card shadow p-0 mb-3">
         <div class="card-body d-flex justify-content-between">
           <h4><%= @shrine.name %></h4>
-          <h3 id="bookmark_<%= @shrine.id %>">
-            <%= render "bookmarks/bookmark", shrine:@shrine %>
-          </h3>
+          <% if user_signed_in? %>
+            <h3 id="bookmark_<%= @shrine.id %>">
+              <%= render "bookmarks/bookmark", shrine:@shrine %>
+            </h3>
+          <% end %>
         </div>
         <div id="shrine-images">
           <% @shrine.shrine_images.each do |image| %>
@@ -28,8 +31,6 @@
             <% end %>
           </li>
         </ul>
-          <!--%= @shrine.latitude %>-->
-          <!--%= @shrine.longitude %>-->
       </div>
        <div id="map" style="width: 100%; height: 350px;">
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
@@ -49,7 +50,10 @@
     </div>
 
     <div class="col-5">
-      <div><%= link_to '新規投稿', new_shrine_post_path(@shrine, @shrine.posts), class:"btn btn-sm btn-primary" %></div>
+      <div class="d-flex mb-3">
+        <h4 class="m-0">最近の投稿</h4>
+        <%= link_to '投稿する', new_shrine_post_path(@shrine, @shrine.posts), class:"btn btn-sm btn-outline-success rounded-pill ml-3" %>
+      </div>
       <% @posts.each do |post| %>
         <div class="card p-2 mb-2">
           <div class="card-header mb-1 d-flex justify-content-between">
@@ -60,15 +64,16 @@
             <small class="text-muted pt-2">参拝日:<%= post.visit_date.strftime("%Y年%m月%d日") %></small>
           </div>
           <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
-            <div class="col-12 p-0 d-flex flex-wrap justify-content-between">
+            <div class="col-12 p-0 d-flex flex-wrap">
               <% post.post_images.each do |post_image| %>
-                <%= attachment_image_tag post_image, :image, style:"width: 30%;" %>
+                <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
               <% end %>
             </div>
             <%= post.body.truncate(50) %>
           <% end %>
         </div>
       <% end %>
+      <%= paginate @posts %>
     </div>
   </div>
 </div>
