--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,12 +1,13 @@
-<div>
+<div class="pt-3">
   <div>
     <div class="offset-2 mt-5">
       <h4 class="d-inline" style='text-shadow: 1px 2px 3px #808080;'>新規会員登録</h4>
       <div class="mx-2 my-4"><h5 class="d-inline bg-light">会員がまだの方はこちらから</h5></div>
+      <%= render "users/shared/error_messages", resource: resource %>
+      <p class="text-danger"><%= flash[:notice] %></p>
       <%= form_with model: @user, url: user_registration_path, id:'new_user', class:'new_user', local: true do |f| %>
-        <%= render "users/shared/error_messages", resource: resource %>
         <div class="form-row">
-          <div class="col-2">名前</div>
+          <div class="col-2">名前（2文字以上）</div>
           <div class="field">
             <%= f.text_field :name, autofocus: true, autocomplete: "name", size: 40, class:"ml-3 mb-3" %>
           </div>
