--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<div class="container mt-5">
+<div class="container mt-3">
   <div class="row">
+    <% breadcrumb :user, @user %>
     <div class="col-8">
       <h2>マイページ</h2>
       <div class="d-flex">
