--- a/app/views/admin/shrines/new.html.erb
+++ b/app/views/admin/shrines/new.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container py-5">
   <div class="row">
     <div class="col-8 mx-auto">
-      <h1>新規登録</h1>
+      <h2>新規登録</h2>
       <%= form_with model: [:admin, @shrine], local: true do |f| %>
         <div class="form-row mb-3">
           <%= f.label :神社名, class:"col-2" %>
@@ -17,11 +17,11 @@
         </div>
         <div class="form-row mb-3">
           <%= f.label :祭神, class:"col-2" %>
-          <%= f.text_field :god_name, class:"col-7" %>
+          <%= f.text_area :god_name, class:"col-7" %>
         </div>
         <div class="form-row mb-3">
           <%= f.label :タグ, class:"col-2" %>
-          <%= f.text_field :tag_name, class:"col-7" %>
+          <%= f.text_area :tag_name, class:"col-7" %>
         </div>
         <div class="form-row mb-3">
           <%= f.label :画像, class:"col-2" %>
