--- a/app/views/admin/shrines/show.html.erb
+++ b/app/views/admin/shrines/show.html.erb
@@ -1,27 +1,35 @@
-<div class="container">
+<div class="container py-5">
   <div class="row">
-    <div class="col-8">
-      <h1>神社詳細</h1>
+    <div class="col-7">
+      <h2>神社詳細</h2>
       <div class="card shadow p-0 mb-3">
-        <% @shrine.shrine_images.first(1).each do |image| %>
-          <%= attachment_image_tag image, :image %>
-        <% end %>
-        <div class="card-body">
-          <h5><%= @shrine.name %></h5>
-          <p><%= @shrine.address %></p>
+        <div class="card-body d-flex justify-content-between">
+          <h4 class="mt-2"><%= @shrine.name %></h4>
+          <div>
+            <p class="m-0">ブックマーク数:<%= @shrine.bookmarks.count %></p>
+            <p class="m-0">閲覧数:<%= @shrine.impressions_count %></p>
+          </div>
+        </div>
+        <div class="d-flex flex-wrap">
+          <% @shrine.shrine_images.each do |image| %>
+            <%= attachment_image_tag image, :image, class:"w-50" %>
+          <% end %>
         </div>
         <ul class="list-group">
           <li class="list-group-item">
-            <%= @shrine.introduction %>
+            <%= @shrine.address %>
           </li>
           <li class="list-group-item">
+            <%= @shrine.introduction %>
+          </li>
+          <li class="list-group-item">祭神:
             <% @shrine.gods.each do |god| %>
               <%= link_to god.god_name, search_path(content: god.god_name, model: 'god'), class:"text-reset" %>
             <% end %>
           </li>
           <li class="list-group-item">
             <% @shrine.tags.each do |tag| %>
-              <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, model: 'tag'), class:"text-reset" %>
+              <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, model: 'tag'), class:"tag text-reset" %>
             <% end %>
           </li>
         </ul>
@@ -29,10 +37,34 @@
           <%= link_to '編集', edit_admin_shrine_path(@shrine), class: "btn btn-sm btn-success" %>
           <%= link_to '削除', admin_shrine_path(@shrine), method: :delete, class: "btn btn-sm btn-danger" %>
         </div>
-          <%= @shrine.latitude %>
-          <%= @shrine.longitude %>
-          <%= @shrine.impressions_count %>
       </div>
+      <div id="map" style="width: 100%; height: 350px;">
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
+      </div>
+    </div>
+
+    <div class="col-5">
+      <h2>投稿一覧</h2>
+      <% @posts.each do |post| %>
+        <div class="card p-2 mb-2">
+          <div class="card-header mb-1 d-flex justify-content-between">
+            <%= link_to  admin_user_path(post.user) do %>
+              <%= attachment_image_tag post.user, :profile_image, :fill,35,35, class:"rounded-circle" %>
+              <%= post.user.name %>
+            <% end %>
+            <small class="text-muted pt-2">参拝日:<%= post.visit_date.strftime("%Y年%m月%d日") %></small>
+          </div>
+          <%= link_to admin_shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
+            <div class="col-12 p-0 d-flex flex-wrap">
+              <% post.post_images.each do |post_image| %>
+                <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
+              <% end %>
+            </div>
+            <%= post.body.truncate(50) %>
+          <% end %>
+        </div>
+      <% end %>
+      <%= paginate @posts %>
     </div>
   </div>
 </div>
