--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,26 +1,22 @@
-  <div class="container pt-5">
+  <div class="container py-5">
     <div class="row">
       <div class="col-10">
         <h4><%= @user.name %>さんの会員情報編集</h4>
         <%= form_with url: admin_user_path(@user), model: [:admin ,@user], local: true, class:'mt-4' do |f| %>
-          <div class="form-group">
-            <%= f.label :'会員ID', class:"col-2" %>
-            <%= @user.id %>
-          </div>
-          <div class="form-group">
+          <div class="form-row">
             <%= f.label :'氏名', class:"col-2" %>
-            <%= f.text_field :name, class:"mr-3" %>
+            <%= f.text_field :name, class:"col-4 p-1 mr-3" %>
           </div>
-          <div class="form-group">
+          <div class="form-row my-3">
             <%= f.label :'メールアドレス', class:"col-2" %>
-            <%= f.text_field :email %>
+            <%= f.text_field :email, class:"col-4 p-1" %>
           </div>
-          <div class="form-group">
+          <div class="form-row">
             <%= f.label :'紹介文', class:"col-2" %>
-            <%= f.text_area :introduction %>
+            <%= f.text_area :introduction, class:"col-4 p-1" %>
           </div>
           <div>
-            <%= f.label :'会員ステータス', class:"col-2" %>
+            <%= f.label :'会員ステータス', class:"col-2 pl-0" %>
             <%= f.radio_button :is_deleted, false, id: 'user_false' %><%= f.label :false, "有効", class:'mr-2' %>
             <%= f.radio_button :is_deleted, true, id: 'user_true' %><%= f.label :true, "退会" %>
           </div>
