--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,11 +1,11 @@
-<div class='container px-5 px-sm-0 pt-5'>
-  <div class='row'>
-    <div class='col-md-8 mx-auto'>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-md-8 mx-auto">
       <h3>会員一覧</h3>
-      <table class='table table-hover table-inverse mt-4'>
+      <table class="table table-bordered table-hover mt-4">
         <thead>
           <tr>
-            <th class='col-2'>会員ID</th>
+            <th>ID</th>
             <th>氏名</th>
             <th>メールアドレス</th>
             <th>ステータス</th>
@@ -17,7 +17,7 @@
               <td><%= user.id %></td>
               <td><%= link_to user.name, admin_user_path(user) %></td>
               <td><%= user.email %></td>
-              <td class>
+              <td>
                 <% if user.is_deleted %>
                   <p class='text-secondary'>退会</p>
                 <% else %>
