--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,8 +1,8 @@
-<div class="container pt-5">
+<div class="container py-5">
   <div class="row">
-    <div class="col-11 mx-auto">
+    <div class="col-7">
       <h3><%= @user.name %>さんの会員情報</h3>
-      <table class="col-7 table table-bordered border-primary mt-4">
+      <table class="table table-bordered border-primary mt-4">
         <tr>
           <td class="col-3 table-secondary">会員ID</td>
           <td><%= @user.id %></td>
@@ -30,11 +30,32 @@
           </td>
         </tr>
       </table>
-      <div class="col-7 d-flex justify-content-center mt-4">
-        <div class='col-4 px-0'>
-          <%= link_to '編集する', edit_admin_user_path(@user), class:"btn btn-sm btn-success mr-3" %>
-          <%= link_to '一覧に戻る', admin_users_path, class:"btn btn-sm btn-primary" %>
-        </div>
+      <div class="offset-2 d-flex mt-4">
+        <%= link_to '編集する', edit_admin_user_path(@user), class:"btn btn-sm btn-success mr-3" %>
+        <%= link_to '一覧に戻る', admin_users_path, class:"btn btn-sm btn-primary" %>
+      </div>
+    </div>
+  </div>
+  <div class="row mt-5">
+      <h3><%= @user.name %>さんの投稿一覧<small><%= "(#{@posts.count}件)" %></small></h3>
+      <% if @posts.exists? %>
+      <div class="d-flex flex-wrap">
+        <% @posts.each do |post| %>
+          <%= link_to admin_shrine_post_path(post.shrine, post), class:"col-4 text-reset px-1" do %>
+            <div class="card mb-2 p-2">
+              <h5 class="border-bottom"><%= post.shrine.name %></h5>
+              <%= post.body.truncate(70) %>
+              <div class="d-flex">
+                <% post.post_images.each do |post_image| %>
+                  <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+      <% else %>
+        <p>まだ投稿はありません</p>
+      <% end %>
     </div>
   </div>
 </div>
