--- a/app/views/users/caution.html.erb
+++ b/app/views/users/caution.html.erb
@@ -1,5 +1,6 @@
-<div class="container d-flex align-items-center justify-content-center">
-  <div class="d-flex flex-column">
+<div class="container">
+  <% breadcrumb :user_caution %>
+  <div class="d-flex flex-column  align-items-center justify-content-center py-5">
     <p class="text-center font-weight-bold">本当に退会しますか？</p>
     <p class="text-center">
       退会すると、会員登録情報や<br />
