--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,7 +1,7 @@
 <header class="pb-5">
-  <nav class="navbar navbar-expand-md bg-dark fixed-top" style="height: 200;">
+  <nav class="navbar navbar-expand-md bg-dark fixed-top py-0">
     <div class="container">
-      <a class="navbar-brand" href="/"><i class="fas fa-torii-gate text-white"></i></a>
+      <a class="navbar-brand" href="/"><%= image_tag "logo.png", size:"100x50" %></a>
       <div class="mr-auto">
         <ul class="navbar-nav">
           <% if admin_signed_in? %>
