--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,33 @@
 <header class="pb-5">
-  <nav class="navbar navbar-expand-md bg-dark fixed-top" style="height: 200;">
+  <nav class="navbar navbar-expand-lg bg-dark fixed-top py-0">
     <div class="container">
-      <a class="navbar-brand" href="/"><i class="fas fa-torii-gate text-white"></i></a>
-      <div class="mr-auto">
-        <ul class="navbar-nav">
-          <% if user_signed_in? %>
-            <li><%= link_to "マイページ", user_path(current_user), class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "概要", about_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
-              <%= render "layouts/header_shrine" %>
-            </li>
-            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
-          <% else %>
-            <li><%= link_to "概要", shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
-              <%= render "layouts/header_shrine" %>
-            </li>
-            <li><%= link_to "新規登録", new_user_registration_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-            <li><%= link_to "ログイン", new_user_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-          <% end %>
-        </ul>
-      </div>
-      <div>
-        <%= render "searches/form" %>
+      <a class="navbar-brand" href="/"><%= image_tag "logo.png", size:"100x50" %></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#TogglerMenu" aria-controls="TogglerMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="TogglerMenu">
+        <div class="mr-auto">
+          <ul class="navbar-nav">
+            <% if user_signed_in? %>
+              <li><%= link_to "マイページ", user_path(current_user), class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "概要", about_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
+                <%= render "layouts/header_shrine" %>
+              </li>
+              <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
+            <% else %>
+              <li><%= link_to "概要", shrines_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
+                <%= render "layouts/header_shrine" %>
+              </li>
+              <li><%= link_to "新規登録", new_user_registration_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+              <li><%= link_to "ログイン", new_user_session_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
+            <% end %>
+          </ul>
+        </div>
+        <div>
+          <%= render "searches/form" %>
+        </div>
       </div>
     </div>
   </nav>
