--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,21 +1,22 @@
-<div class="container">
+<div class="container py-3">
   <div class="row">
-    <div class="col-8 mx-auto">
+    <% breadcrumb :edit_post, @post %>
+    <div class="col-lg-10 mx-auto">
       <h3>投稿編集</h3>
       <%= form_with model: [@shrine, @post], local: true do |f| %>
-        <div class="form-group">
+        <div class="form-row">
           <%= f.label :画像, class:"col-2" %>
           <%= f.attachment_field :post_images_images, multiple: true, class:"col-6" %>
         </div>
-        <div class="form-group">
+        <div class="form-row my-3">
           <%= f.label :感想, class:"col-2" %>
           <%= f.text_area :body, rows: 6, class:"col-6" %>
         </div>
-        <div class="form-group">
+        <div class="form-row">
           <%= f.label :参拝日, class:"col-2" %>
           <%= f.date_field :visit_date, class:"col-3" %>
         </div>
-        <%= f.submit "投稿", class:"btn btn-sm btn-success" %>
+        <%= f.submit "投稿", class:"btn btn-sm btn-success offset-2 mt-4" %>
       <% end %>
     </div>
   </div>
