--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container mt-3">
+<div class="container py-3">
   <div class="row">
     <% breadcrumb :shrine_post, @post %>
-    <div class="col-7">
+    <div class="col-lg-7">
       <h3><%= link_to @post.shrine.name, shrine_path(@post.shrine), class:"text-reset" %></h3>
       <div class="card">
         <div class="card-header d-flex justify-content-between pb-0">
@@ -19,12 +19,12 @@
             <% end %>
           </div>
           <% if @post.user == current_user %>
-            <%= link_to '編集', edit_shrine_post_path(@post.shrine, @post), class:"btn btn-sm btn-success col-2" %>
-            <%= link_to '削除', shrine_post_path(@post.shrine, @post), method: :delete, class:"btn btn-sm btn-danger col-2" %>
+            <%= link_to '編集する', edit_shrine_post_path(@post.shrine, @post), class:"btn btn-sm btn-outline-success mr-3" %>
+            <%= link_to '削除する', shrine_post_path(@post.shrine, @post), method: :delete, class:"btn btn-sm btn-outline-danger" %>
           <% end %>
         </div>
       </div>
-      <h4><%= @post.user.name %>さんの他の投稿</h4>
+      <h4 class="mt-3"><%= @post.user.name %>さんの他の投稿</h4>
       <% if @other_posts.exists? %>
         <% @other_posts.each do |other_post| %>
           <%= link_to shrine_post_path(other_post.shrine, other_post), class:"text-reset" do %>
@@ -44,7 +44,7 @@
       <% end %>
     </div>
 
-    <div class="col-5">
+    <div class="col-lg-5">
       <h3>他の人の投稿</h3>
       <% if @other_user_posts.exists? %>
         <% @other_user_posts.limit(5).each do |post| %>
