--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container mt-3">
+<div class="container py-3">
   <div class="row">
     <% breadcrumb :shrine, @shrine %>
-    <div class="col-7">
+    <div class="col-lg-7">
       <div class="card shadow p-0 mb-3">
         <div class="card-body d-flex justify-content-between">
           <h4><%= @shrine.name %></h4>
@@ -49,7 +49,7 @@
       </table>
     </div>
 
-    <div class="col-5">
+    <div class="col-lg-5">
       <div class="d-flex mb-3">
         <h4 class="m-0">最近の投稿</h4>
         <%= link_to '投稿する', new_shrine_post_path(@shrine, @shrine.posts), class:"btn btn-sm btn-outline-success rounded-pill ml-3" %>
